Updating the portfolio with the new makememe.ai project

--- a/portfolio/templates/portfolio/home.html
+++ b/portfolio/templates/portfolio/home.html
@@ -26,21 +26,20 @@
 <section class="bg-gray-400 py-10">
 	<div class="container">
 		<div class="row text-center">
-
-			<div class="col-lg-4 mb-5 mb-lg-0">
-				<div class="icon-stack icon-stack-xl bg-black text-white mb-4"><i data-feather="smartphone"></i></div>
-				<h3>Mobile Development</h3>
-				<p class="mb-0">4 years creating iOS apps applications using a wide range of the iPhone's built in technology</p>
-			</div>
 			<div class="col-lg-4 mb-5 mb-lg-0">
 				<div class="icon-stack icon-stack-xl bg-gray-900 text-white mb-4"><i data-feather="list"></i></div>
 				<h3>Web Development</h3>
-				<p class="mb-0">5 years frontend and backend web applications</p>
+				<p class="mb-0">5 years creating frontend and backend web applications with javascript, python, and PHP using standard frameworks such as flask and django</p>
+			</div>
+			<div class="col-lg-4 mb-5 mb-lg-0">
+				<div class="icon-stack icon-stack-xl bg-black text-white mb-4"><i data-feather="smartphone"></i></div>
+				<h3>Mobile Development</h3>
+				<p class="mb-0">4 years creating iOS applications using a wide range of the iPhone's built in technology</p>
 			</div>
 			<div class="col-lg-4">
 				<div class="icon-stack icon-stack-xl bg-gray-800 text-white mb-4"><i data-feather="code"></i></div>
 				<h3>Machine Learning</h3>
-				<p class="mb-0">1 year applying Machine Learning into applications, including applying GPT-3 on my tryrix.com project.</p>
+				<p class="mb-0">1 year applying Machine Learning into applications, including applying GPT-3</p>
 			</div>
 
 		</div>
@@ -136,7 +135,7 @@
 
 	<div class="container">
 		<div class="row justify-content-center">
-			<div class="col-lg-8 text-center">
+			<div class="col-lg-4 text-center">
 				<img class="img-fluid rounded-circle mb-3" src="{% static 'portfolio/me.jpeg' %}" alt="...">
 				<h2>Contact me</h2>
 				<p class="mb-5">I am open to exciting opportunities working on the future of Machine Learning and AI.</p>
@@ -149,14 +148,14 @@
 							</div>
 						</div>
 					</div>
-					<div class="col">
-						<div class="card">
-							<div class="card-body">
-								<div class="icon-stack icon-stack-lg bg-green text-white mb-3"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-smartphone"><rect x="5" y="2" width="14" height="20" rx="2" ry="2"></rect><line x1="12" y1="18" x2="12.01" y2="18"></line></svg></div>
-								<div class="small">714-747-4702</div>
-							</div>
-						</div>
-					</div>
+{#					<div class="col">#}
+{#						<div class="card">#}
+{#							<div class="card-body">#}
+{#								<div class="icon-stack icon-stack-lg bg-green text-white mb-3"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-smartphone"><rect x="5" y="2" width="14" height="20" rx="2" ry="2"></rect><line x1="12" y1="18" x2="12.01" y2="18"></line></svg></div>#}
+{#								<div class="small">714-747-4702</div>#}
+{#							</div>#}
+{#						</div>#}
+{#					</div>#}
 				</div>
 			</div>
 		</div>
