--- a/portfolio/templates/portfolio/projects.html
+++ b/portfolio/templates/portfolio/projects.html
@@ -46,6 +46,13 @@
 
 				</div>
 			</a>
+			<a class="card card-portfolio" href="http://makememe.ai/">
+				<img class="card-img-top" src="{% static 'portfolio/makememe.png' %}" alt="...">
+				<div class="card-body">
+					<div class="card-title">Makememe.ai - Using GPT-3 and AI to make memes</div>
+
+				</div>
+			</a>
 
 		</div>
 
